--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "pretest": "standard",
     "start": "node cli.js blocks",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "standard",
+    "test": "ava --no-worker-threads"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +16,17 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.386.0",
     "@aws-sdk/util-dynamodb": "^3.386.0",
+    "it-batch": "^3.0.2",
+    "it-ndjson": "^1.0.3",
     "multiformats": "^12.0.1",
     "ora": "^7.0.1",
     "uint8arrays": "^4.0.6"
   },
   "devDependencies": {
+    "ava": "^5.3.1",
+    "nanoid": "^4.0.2",
     "standard": "^17.1.0",
+    "testcontainers": "^10.2.1",
     "typescript": "^5.1.6"
   }
 }
