chore: extend test timeout so we can fetch a dyanmo db image
License: MIT
Signed-off-by: Oli Evans <oli@protocol.ai>

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pretest": "standard",
     "start": "node cli.js blocks",
     "lint": "standard",
-    "test": "ava --no-worker-threads"
+    "test": "ava --no-worker-threads --timeout 60s"
   },
   "keywords": [],
   "author": "",
